Fixed menu line on mobile

--- a/static-src/styles/custom.scss
+++ b/static-src/styles/custom.scss
@@ -84,6 +84,12 @@
 
 }
 
+@media screen and (max-width: $tablet) {
+  body .menu-main-nav-menu-container > ul .menu-item::after {
+    border: none;
+  }
+}
+
 .normal-header-logo {
     width: 200px;
 }
